--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.1",
     "gulp-rename": "^1.4.0",
+    "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-terser": "^1.1.7",
     "gulp-typescript": "^5.0.0",
     "gulp-util": "^3.0.8",
     "merge-stream": "^1.0.1",
+    "node-sass": "^4.11.0",
     "tsify": "^4.0.1",
     "typescript": "^3.3.3",
     "vinyl-buffer": "^1.0.1",
