--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gulp-util": "^3.0.8",
     "merge-stream": "^1.0.1",
     "node-sass": "^4.11.0",
+    "pdf-maker": "0.0.2",
     "tsify": "^4.0.1",
     "typescript": "^3.3.3",
     "vinyl-buffer": "^1.0.1",
