--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "vinyl-source-stream": "^2.0.0"
   },
   "dependencies": {
+    "@sendgrid/mail": "^6.3.1",
+    "express": "^4.16.4",
     "jquery": "^3.3.1"
   }
 }
