--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^6.3.1",
+    "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "jquery": "^3.3.1"
   }
