finished hire me email form

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "files": [
-        "./src/APIClasses/ts/APImain.ts"
+        "./src/mycv/ts/Main.ts"
     ],
     "compilerOptions": {
         "noImplicitAny": true,
