--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@sendgrid/mail": "^6.3.1",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "jquery": "^3.3.1"
+    "jquery": "^3.3.1",
+    "mongodb": "^3.1.13"
   }
 }
