--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
   "dependencies": {
     "@sendgrid/mail": "^6.3.1",
     "body-parser": "^1.18.3",
+    "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.4",
     "jquery": "^3.3.1",
-    "mongodb": "^3.1.13"
+    "mongodb": "^3.1.13",
+    "request": "^2.88.0"
   }
 }
