added sms to me, added download spinner

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "express": "^4.16.4",
     "jquery": "^3.3.1",
     "mongodb": "^3.1.13",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "twilio": "^3.29.2"
   }
 }
